<resources>
    <string name="app_name">My Application</string>
    <string name="bmw">BMW
        2000 G</string>
    <string name="family">ファミリーカー
        1000G</string>
    <string name="matsuda">マツダ
    500 G</string>
    <string name="buy">購入する</string>
    <string name="bed1">ちょっとショボいベッド
    200 G</string>
    <string name="bed2">気持ち良さそうなベッド
    500 G</string>
    <string name="bed3">おしゃれなベッド
    1000 G</string>

    <string name="amatose">AMATOSE</string>
</resources>

