<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shelf"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="128dp"
            android:layout_height="99dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@drawable/family"
            android:src="@drawable/family" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="56dp"
            android:layout_height="71dp"
            android:layout_marginStart="40dp"
            android:text="@string/family"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="18dp"
            android:layout_height="50dp"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:background="#C2E8E8"
            android:text="@string/buy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="128dp"
            android:layout_height="99dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@drawable/bmw"
            android:src="@drawable/bmw" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:text="@string/bmw"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button6"
            android:layout_width="18dp"
            android:layout_height="50dp"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:background="#C2E8E8"
            android:text="@string/buy" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="128dp"
            android:layout_height="99dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@drawable/matsuda"
            android:src="@drawable/matsuda" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:text="@string/matsuda"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button7"
            android:layout_width="18dp"
            android:layout_height="50dp"
            android:layout_margin="18dp"
            android:layout_weight="1"
            android:background="#C2E8E8"
            android:text="@string/buy" />
    </LinearLayout>
</LinearLayout>